<resources>
    <string name="app_name">business-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- activity change password -->
    <string name="ConfirmNewPassword">Confirm new password</string>
    <string name="NewPassword">Enter new password</string>
    <string name="ConformPasswordChange">SAVE</string>


    <!-- activity main business -->
    <string name="textViewWelcom">hello (user name)</string>

    <!-- activity business profile -->

    <string name="Phone1MP">PHONE 1 FROM DB</string>
    <string name="phone2MP">PHONE 2 FROM DB</string>
    <string name="textMP">BUSINESS NAME FROM DB</string>
    <string name="EmailMP">EMAIL FROM DB</string>
    <string name="ChangeMP">EDIT</string>
    <string name="PassChangeMP">CHANGE PASSWORD</string>
    <string name="cityMP">city FROM DB</string>
    <string name="entranceMP">entrance FROM BD</string>
    <string name="numberMP">number FROM DB</string>
    <string name="streetMP">street FROM DB</string>
    <string name="aprtMP">apartment FROM DB</string>
    <string name="floorMP">floor FROM DB</string>

    <!-- activity edit my profile -->

    <string name="Phone1EP">new phone number</string>
    <string name="Phone2EP">new additional phone number</string>
    <string name="textEP">Edit Profile</string>
    <string name="EmailEP">new email address</string>
    <string name="ChangeEP">SAVE</string>
    <string name="NameEP">new business name</string>
    <string name="cityEP">city</string>
    <string name="entranceEP">entrance</string>
    <string name="numberEP">number</string>
    <string name="streetEP">street</string>
    <string name="aprtEP">apartment</string>
    <string name="floorEP">floor</string>

    <!-- activity main -->
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="Connect">LOG IN</string>
    <string name="forgetPass"><u>FORGOT PASSWORD?</u></string>
    <string name="newBusiness"><u>New User? Register Now</u></string>


    <!-- activity register new business -->
    <string name="business_name">Business name</string>
    <string name="PasswordEt">Password</string>
    <string name="EmailEt">Email</string>
    <string name="Phone2">Additional phone number</string>
    <string name="Phone1">Phone number</string>
    <string name="Text">NEW USER</string>
    <string name="create">CREATE ACCOUNT</string>
    <string name="city">city</string>
    <string name="entrance">entrance</string>
    <string name="number">number</string>
    <string name="street">street</string>
    <string name="aprt">apartment</string>
    <string name="floor">floor</string>
    <string name="pay">CREDIT CARD DETAILS</string>



    <!-- activity  new delivery-->
    <string name="CPhone">client phone</string>
    <string name="CName">client name</string>
    <string name="Cnote">notes about the delivery</string>
    <string name="cost">0₪</string>
    <string name="Date">00/00/00</string>
    <string name="Time">time</string>
    <string name="preferd_vehicle">choose preferred vehicle:</string>
    <string name="bicycle">bicycle</string>
    <string name="bike">bike</string>
    <string name="car">car</string>
    <string name="textViewNewdelivery">fill in the following details</string>
    <string name="ndsubmit">SUBMIT</string>
    <string name="CNcity">city</string>
    <string name="CNentrance">entrance</string>
    <string name="CNnumber">number</string>
    <string name="CNstreet">street</string>
    <string name="CNaprt">apartment</string>
    <string name="CNfloor">floor</string>


    <!-- activity  edit delivery -->
    <string name="ETphone">client phone</string>
    <string name="ETname">client name</string>
    <string name="ETnote">notes about the delivery</string>
    <string name="ETcost">0₪</string>
    <string name="ETDate">00/00/00</string>
    <string name="ETTime">time</string>
    <string name="ETpreferd_vehicle">change preferd vehicle</string>
    <string name="ETbike">bike</string>
    <string name="ETcar">car</string>
    <string name="ETbicycle">bicycle</string>
    <string name="ETtextViewNewdelivery">What details would you like to change?</string>
    <string name="ETndsubmit">SAVE CHANGE</string>
    <string name="ETcity">city</string>
    <string name="ETentrance">entrance</string>
    <string name="ETnumber">number</string>
    <string name="ETstreet">street</string>
    <string name="ETaprt">apartment</string>
    <string name="ETfloor">floor</string>



    <!-- activity  payment card detailes -->
    <string name="card">Enter card details </string>
    <string name="messege">This information is stored for reuse</string>


    <!-- activity  show coosen -->
    <string name="printall"> examle of delivery</string>















</resources>