<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.project.fdelivery_bus.newDelivery">

    <EditText
        android:id="@+id/CPhone"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/CPhone"
        android:inputType="phone"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <EditText
        android:id="@+id/CName"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/CName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/CNentrance"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/CNentrance"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <EditText
        android:id="@+id/CNcity"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/CNcity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <EditText
        android:id="@+id/CNnumber"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/CNnumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <EditText
        android:id="@+id/CNstreet"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/CNstreet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/CNaprt"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/CNaprt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />


    <EditText
        android:id="@+id/CNfloor"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/CNfloor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/Cnote"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="80dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/Cnotes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <TextView
        android:id="@+id/cost"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/cost"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <EditText
        android:id="@+id/Date"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/Date"
        android:inputType="date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/Time"
        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:background="@drawable/round_border"
        android:ems="14"
        android:textColor="#040404"
        android:textSize="16sp"
        android:padding="10dp"
        android:hint="@string/Time"
        android:inputType="time"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/preferd_vehicle"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:text="@string/preferd_vehicle"
        android:textColor="#040404"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <CheckBox
        android:id="@+id/bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike"
        android:textColor="#040404"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <CheckBox
        android:id="@+id/car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car"
        android:textColor="#040404"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/ndSubmit"
        android:layout_width="352dp"
        android:layout_height="40dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/ndsubmit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:background="@drawable/round_buttom"
        app:backgroundTint="#00a8f3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNewdelivery"
        android:layout_width="290dp"
        android:layout_height="72dp"
        android:text="@string/textViewNewdelivery"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#abe3fd"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

</androidx.constraintlayout.widget.ConstraintLayout>